--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose",
-    "dev": "nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "dev": "cross-env NODE_ENV=production nodemon index.js",
     "fix": "eslint . --fix"
   },
   "repository": {
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/dastanbeksamatov/blog-app#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
@@ -29,7 +31,8 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "jest": "^25.2.7"
+    "jest": "^25.2.7",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node"
